add and update samples

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@ ACLOCAL_AMFLAGS = -I m4
 
 include doc/doxygen.am
 
-SUBDIRS = odeutil samples/roller-robot
+SUBDIRS = odeutil samples
 EXTRA_DIST = doc
 
 
