--- a/odeutil/Makefile.am
+++ b/odeutil/Makefile.am
@@ -3,3 +3,8 @@ libodeutil_la_SOURCES = indicator.cpp inroffield.cpp marker.cpp normal.cpp odeut
 
 libodeutil_la_includedir = $(includedir)/odeutil
 libodeutil_la_include_HEADERS = indicator.h inroffield.h marker.h normal.h odeutil.h platform.h readme.h roller.h slopefield.h
+
+if WIN32
+libodeutil_la_include_HEADERS += resource.h
+libodeutil_la_SOURCES += resources.rc
+endif
