--- a/.gitignore
+++ b/.gitignore
@@ -19,7 +19,8 @@ config.h
 config.log
 config.status
 libtool
-*.in
+Makefile.in
+config.h.in
 configure
 autom4te.cache
 
@@ -45,3 +46,4 @@ doc/ctp
 doc/ode
 
 aclocal.m4
+*~
