--- a/samples/normal-robot/Makefile.am
+++ b/samples/normal-robot/Makefile.am
@@ -1,8 +1,9 @@
 LDADD = $(top_builddir)/odeutil/libodeutil.la
 
-noinst_PROGRAMS = normalkey inrofkey
+noinst_PROGRAMS = normalkey inrofkey obstaclekey
 normalkey_SOURCES = normalkey.cpp
 inrofkey_SOURCES = inrofkey.cpp
+obstaclekey_SOURCES = obstaclekey.cpp
 
 if WIN32
 resources.o: $(top_srcdir)/odeutil/resources.rc $(top_srcdir)/odeutil/resource.h
